# perceptron

./: CMakeLists.txt
src/: main.cpp  neuron.hpp
